@@ -8,34 +8,39 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.servlet.config.annotation.CorsRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
+import java.util.Arrays;
 import java.util.List;
-
 
 @Configuration
 public class CorsConfig {
-
+    
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-
         CorsConfiguration config = new CorsConfiguration();
-
-        config.setAllowedOrigins(List.of(
-                "http://localhost:5173",
-                "https://task-manager-backend-0qvl.onrender.com"
+        
+        // Allow requests from frontend origins
+        config.setAllowedOrigins(Arrays.asList(
+                "http://localhost:3000",      // React default port
+                "http://localhost:5173",      // Vite default port
+                "http://localhost:5174",      // Vite alternate port
+                "https://task-manager-backend-0qvl.onrender.com" // Your backend (for testing)
+                // Add your deployed frontend URL here when you deploy
+                // "https://your-app.vercel.app",
+                // "https://your-app.netlify.app"
         ));
-
-        config.setAllowedMethods(List.of(
-                "GET", "POST", "PUT", "DELETE", "OPTIONS"
+        
+        // Allow all HTTP methods
+        config.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
         ));
-
-        config.setAllowedHeaders(List.of("*"));
-
+        
+        // Allow all headers
+        config.setAllowedHeaders(Arrays.asList("*"));
         config.setAllowCredentials(true);
-
-        UrlBasedCorsConfigurationSource source =
-                new UrlBasedCorsConfigurationSource();
-
+        config.setMaxAge(3600L);
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
+        
         return source;
     }
 }
